...
        android:text="Sign Out"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/friendsButton"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Friends"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/helpIcon"
...
